# ProjetWebEventX

./: .dockerignore  .gitignore  README.md  docker-compose.yml
client/: Dockerfile  composer.json  event-detail.php  events.php  index.html  index.php  login.php  register.php
client/controllers/: AuthController.php  EventController.php  EventDetailController.php  HomeController.php
client/services/: EventService.php  EventUser.php
client/templates/: base.twig  event-detail.twig  events.twig  home.twig  login.twig  register.twig
database/: init.sql
panel/: CMakeLists.txt  vcpkg.json
panel/src/: Application.cpp  Application.hpp  main.cpp
panel/src/controllers/: EventController.cpp  EventController.hpp  UserController.cpp  UserController.hpp
panel/src/models/: ApiClient.cpp  ApiClient.hpp  Event.cpp  Event.hpp  User.cpp  User.hpp
panel/src/views/: BaseView.cpp  BaseView.hpp  EventsView.cpp  EventsView.hpp  UsersView.cpp  UsersView.hpp
panel/src/views/components/: Button.cpp  Button.hpp  Table.cpp  Table.hpp
server/: .htaccess  Dockerfile  index.php
server/config/: database.php
server/controller/: conection.php
server/controllers/: Controller.php  RegistrationController.php  UserController.php  eventController.php
server/core/: Router.php
server/dataAccess/: DataAccess.php  EventDataAccess.php  RegistrationDataAccess.php  UserDataAccess.php
server/model/: User.php
server/models/: Event.php  Registration.php  User.php  event.php  model.php  user.php
server/routes/: api.php
server/services/: EventService.php  RegistrationService.php  (+1 more)
